--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "nodemon": "^1.9.2",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "material-ui": "^0.17.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
-    "react-router": "^2.5.0"
+    "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
-
