--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "material-ui": "^0.17.1",
+    "mongoose": "^4.9.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
