--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "firebase": "^3.7.2",
     "material-ui": "^0.17.1",
     "mongoose": "^4.9.0",
     "react": "^15.1.0",
