hooked up go button

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "material-ui": "^0.17.1",
     "mongoose": "^4.9.0",
     "react": "^15.1.0",
+    "react-autobind": "^1.0.6",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
