--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "superagent": "^3.5.0"
   }
 }
